posting to DB successfully

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -25,7 +25,7 @@
 
   <div id="center">
     <p>
-      <input id="enterNewTask" placeholder="Enter New Task">
+      <input id="enterNewTask" name="tasks_active" placeholder="Enter New Task">
       <button id="enterNewTaskButton">Enter New Task</button>
     </p>
 
