hamburger menu added-working but bugs on task inputs

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div id="container">
-      <h1 id="pc">MyTaskApp_PhilCurtis-above header</h1>
+      <!-- <h1 id="pc">MyTaskApp_PhilCurtis-above header</h1> -->
   <header>
     <div id="hamburger">
       <div></div>
@@ -38,17 +38,8 @@
     <!-- Hamburger menu -->
       <!-- https://www.w3schools.com/howto/howto_css_menu_icon.asp -->
 
-  <div id="contentLayer"></div>
-
-<div class="content">
-    <p>
-      <div id="folders">
-        <h4>Folders</h4>
-        <ul>
-        </ul>
-      </p>
-    </div>
-
+  <!-- <div id="contentLayer"></div>
+<div class="content"> -->
     <div id="taskEntry">
       <form id="newTaskForm" action="index.html" method="post">
         <p>
@@ -56,6 +47,8 @@
           <button type="submit" id="enterNewTaskButton">Click here to enter a new task</button>
         </p>
       </form>
+      <div id="contentLayer"></div>
+    <div class="content">
       <p>
         <table>
           <thead>
