--- a/server/public/index.html
+++ b/server/public/index.html
@@ -13,13 +13,13 @@
   <div id="container">
     <!-- Hamburger menu -->
       <!-- https://www.w3schools.com/howto/howto_css_menu_icon.asp -->
-  <!-- <header>
+  <header>
     <div id="hamburger">
       <div></div>
       <div></div>
       <div></div>
     </div>
-  </header> -->
+  </header>
     <h2 id="pc">MyTaskApp_PhilCurtis</h2>
     <!-- <nav>
       <ul>
